[gd_scene load_steps=3 format=3 uid="uid://cuf8vatop611e"]

[ext_resource type="Script" uid="uid://ddaxrx16xpmgs" path="res://file manager/file_manager.gd" id="1_yk35e"]
[ext_resource type="Theme" uid="uid://bgr3x6jwhynme" path="res://themes/dark_theme.tres" id="2_em32t"]

[node name="FileManager" type="Control"]
process_mode = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_yk35e")

[node name="OpenFileDialog" type="FileDialog" parent="."]
process_mode = 3
title = "Open File(s)"
initial_position = 2
size = Vector2i(434, 500)
theme = ExtResource("2_em32t")
ok_button_text = "Open"
file_mode = 1
access = 2
filters = PackedStringArray("*.mLab")

[node name="SaveFileDialog" type="FileDialog" parent="."]
process_mode = 3
title = "New File"
initial_position = 2
size = Vector2i(474, 500)
theme = ExtResource("2_em32t")
access = 2
filters = PackedStringArray("*.mLab")

[node name="FileOpenedDialog" type="AcceptDialog" parent="."]
initial_position = 2
size = Vector2i(237, 100)
theme = ExtResource("2_em32t")
dialog_text = "File is already opened!"

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="OpenedFiles" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="canceled" from="OpenFileDialog" to="." method="_on_open_file_dialog_canceled"]
[connection signal="files_selected" from="OpenFileDialog" to="." method="_on_open_file_dialog_files_selected"]
[connection signal="canceled" from="SaveFileDialog" to="." method="_on_save_file_dialog_canceled"]
[connection signal="file_selected" from="SaveFileDialog" to="." method="_on_save_file_dialog_file_selected"]
